--- a/frontend/rating.html
+++ b/frontend/rating.html
@@ -8,17 +8,37 @@
 
 <body>
     <h2>Rating Prediction</h2>
-    <form>
-        <label>Location: <input type="text" name="location" /></label><br />
-        <label>Cost: <input type="number" name="cost" /></label><br />
-        <label>Cuisine: <input type="text" name="cuisine" /></label><br />
-        <label>Type: <input type="text" name="type" /></label><br />
-        <label>Booking Available: <select>
-                <option>Yes</option>
-                <option>No</option>
-            </select></label><br />
+
+    <form action="/predict_rating" method="POST">
+        <label>Location:
+            <input type="text" name="location" required />
+        </label><br />
+
+        <label>Cost:
+            <input type="number" name="cost" step="0.01" required />
+        </label><br />
+
+        <label>Cuisine:
+            <input type="text" name="cuisine" required />
+        </label><br />
+
+        <label>Type:
+            <input type="text" name="type" required />
+        </label><br />
+
+        <label>Booking Available:
+            <select name="booking" required>
+                <option value="Yes">Yes</option>
+                <option value="No">No</option>
+            </select>
+        </label><br /><br />
+
         <button type="submit">Predict Rating</button>
     </form>
+
+    {% if prediction_text %}
+    <h3>{{ prediction_text }}</h3>
+    {% endif %}
 </body>
 
 </html>
